Removed extra fields on Member, fixed bug with collapse JS

--- a/scss/components/_sharer.scss
+++ b/scss/components/_sharer.scss
@@ -13,7 +13,7 @@
     }
     &__list {
         padding: 0;
-        @include margin;
+        @include margin-none;
         &__item {
             display: inline-block;
             list-style: none;
